<resources>
    <string name="app_name">Pirozhkov Teta</string>
    <string name="description_of_movie">"Эйч — загадочный и холодный на вид\nджентльмен, но внутри него пылает жажда\nсправедливости. Преследуя свои мотивы, он\nвнедряется в инкассаторскую компанию, чтобы\nвыйти на соучастников серии многомиллионных\nограблений, потрясших Лос-Анджелес. В этой\nзапутанной игре у каждого своя роль, но под\nподозрением оказываются все. Виновных же\nобязательно постигнет гнев человеческий." </string>
    <string name="date_release_movie">22.04.2021</string>
    <string name="name_of_movie">Гнев человеческий</string>
    <string name="title_actors">Актеры</string>
    <string name="name_one">Джейсон Стэйтем</string>
    <string name="name_two">Холт Маккэллани</string>
    <string name="name_three">Джош Харнетт</string>
    <string name="age_limit">18+</string>
    <string name="description_preview">"Эйч — загадочный\nи холодный на вид\nджентльмен, но внутри\nнего пылает жажда\nсправедливости.\nПреследуя..."</string>


    <!--     жанры фильмов-->
    <string name="genre_action">боевики</string>
    <string name="genre_drama">драмы</string>
    <string name="genre_comedy">комедии</string>
    <string name="genre_art">артхаус</string>
    <string name="genre_melodrama">мелодрамы</string>
    <string name="title_popular_now">Популярное сейчас</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name_Profile">Константин</string>
    <string name="profile_email">konst.89@mail.com</string>
    <string name="profilt_interest">Интересы</string>
    <string name="profile_data_self">Личные данные</string>
    <string name="profile_name">Имя</string>
    <string name="profile_hint_phone">Телефон</string>
    <string name="profile_tittle_settings">Настройки</string>
    <string name="profile_notify_and_sounds">Уведомления и звуки</string>
    <string name="profile_confident">Конфедициальность</string>
    <string name="profile_theme">Тема</string>
    <string name="profile_languge">Язык</string>
    <string name="profile_data">Данные и память</string>
    <string name="profile_app">Приложение</string>
    <string name="profile_sup_que">Задать вопрос</string>
    <string name="profile_sup_report">Сообщить о проблеме</string>
    <string name="profile_exit">Выйти</string>


</resources>