<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/mainPic"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/top_pic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View
                android:id="@+id/textView"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="224dp"
                android:layout_marginBottom="0dp"
                android:background="@drawable/shape_textview"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <ImageView
                android:id="@+id/ellipseTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/indent_margin"
                android:layout_marginTop="32dp"
                android:src="@drawable/ic_small_rectangle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/textView" />

            <TextView
                android:id="@+id/textInEllipse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/genre_action"
                android:textColor="@color/black"
                android:textSize="@dimen/small_text_size"
                app:layout_constraintBottom_toBottomOf="@id/ellipseTextView"
                app:layout_constraintEnd_toEndOf="@id/ellipseTextView"
                app:layout_constraintStart_toStartOf="@id/ellipseTextView"
                app:layout_constraintTop_toTopOf="@id/ellipseTextView" />

            <TextView
                android:id="@+id/dateOfBirth"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/indent_margin"
                android:layout_marginTop="32dp"
                android:text="@string/date_release_movie"
                android:textColor="@color/black"
                android:textSize="@dimen/large_text_size"
                app:layout_constraintStart_toEndOf="@id/ellipseTextView"
                app:layout_constraintTop_toTopOf="@+id/textView" />

            <ImageView
                android:id="@+id/ellipseAge"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="42dp"
                android:layout_marginEnd="@dimen/indent_margin"
                android:src="@drawable/ic_ellipse_age"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/textView" />

            <TextView
                android:id="@+id/ageLimit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="6dp"
                android:layout_marginBottom="10dp"
                android:text="@string/age_limit"
                android:textColor="@color/black"
                android:textSize="@dimen/default_text_size"
                app:layout_constraintBottom_toBottomOf="@id/ellipseAge"
                app:layout_constraintEnd_toEndOf="@id/ellipseAge"
                app:layout_constraintStart_toStartOf="@id/ellipseAge"
                app:layout_constraintTop_toTopOf="@+id/ellipseAge" />

            <TextView
                android:id="@+id/nameOfMovie"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/indent_margin"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/name_of_movie"
                android:textColor="@color/black"
                android:textSize="@dimen/title_text_size"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/dateOfBirth" />

            <RatingBar
                android:id="@+id/rateBars"
                style="@style/Widget.AppCompat.RatingBar.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="8dp"
                android:isIndicator="true"
                android:progressTint="@color/black"
                android:scaleX="1.2"
                android:scaleY="1.2"
                android:stepSize="0.01"
                android:transformPivotX="0dp"
                android:transformPivotY="0dp"
                app:layout_constraintBottom_toTopOf="@id/descriptionOfMovie"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/nameOfMovie" />

            <TextView
                android:id="@+id/descriptionOfMovie"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/indent_margin"
                android:layout_marginTop="@dimen/indent_margin"
                android:layout_marginEnd="10dp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/description_of_movie"
                android:textColor="@color/black"
                android:textSize="@dimen/default_text_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rateBars" />

            <TextView
                android:id="@+id/tActors"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/indent_margin"
                android:layout_marginTop="@dimen/indent_margin"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/title_actors"
                android:textColor="@color/black"
                android:textSize="@dimen/small_title_text_size"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/descriptionOfMovie" />

            <HorizontalScrollView
                android:id="@+id/horizScroll"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="none"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tActors">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">

                    <com.makeramen.roundedimageview.RoundedImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                        android:id="@+id/fotoOne"
                        android:layout_width="@dimen/default_width_pic"
                        android:layout_height="@dimen/default_high_pic"
                        android:layout_marginStart="@dimen/indent_margin"
                        android:layout_marginTop="16dp"
                        android:scaleType="centerCrop"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:riv_corner_radius="10dip"
                        tools:src="@tools:sample/backgrounds/scenic" />

                    <TextView
                        android:id="@+id/nameOne"
                        android:layout_width="@dimen/default_width_pic"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/indent_margin"
                        android:layout_marginTop="@dimen/large_text_size"
                        android:text="@string/name_one"
                        android:textColor="@color/black"
                        android:textSize="@dimen/large_text_size"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/fotoOne" />

                    <com.makeramen.roundedimageview.RoundedImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                        android:id="@+id/fotoTwo"
                        android:layout_width="@dimen/default_width_pic"
                        android:layout_height="@dimen/default_high_pic"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="16dp"
                        android:scaleType="centerCrop"
                        app:layout_constraintStart_toEndOf="@id/fotoOne"
                        app:layout_constraintTop_toTopOf="parent"
                        app:riv_corner_radius="10dip"
                        tools:src="@tools:sample/backgrounds/scenic" />

                    <TextView
                        android:id="@+id/nameTwo"
                        android:layout_width="@dimen/default_width_pic"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="12dp"
                        android:text="@string/name_two"
                        android:textColor="@color/black"
                        android:textSize="@dimen/large_text_size"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@id/nameOne"
                        app:layout_constraintTop_toBottomOf="@id/fotoTwo" />

                    <com.makeramen.roundedimageview.RoundedImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                        android:id="@+id/fotoThree"
                        android:layout_width="@dimen/default_width_pic"
                        android:layout_height="@dimen/default_high_pic"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="16dp"
                        android:scaleType="centerCrop"
                        app:layout_constraintStart_toEndOf="@id/fotoTwo"
                        app:layout_constraintTop_toTopOf="parent"
                        app:riv_corner_radius="10dip"
                        tools:src="@tools:sample/backgrounds/scenic" />

                    <TextView
                        android:id="@+id/nameThree"
                        android:layout_width="@dimen/default_width_pic"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="12dp"
                        android:text="@string/name_three"
                        android:textColor="@color/black"
                        android:textSize="@dimen/large_text_size"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@id/nameTwo"
                        app:layout_constraintTop_toBottomOf="@id/fotoTwo" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </HorizontalScrollView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
